src/objects/Survey_Response_Archived__c.object
<CustomObject>
    <fields>
        <fullName>Add_Info__c</fullName>
        <label>Additional Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Email__c</fullName>
        <label>Alt Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alt_Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alt Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses Archived</relationshipLabel>
        <relationshipName>Survey_Responses_Archived</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alt_First_Name__c</fullName>
        <label>Alt First Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Last_Name__c</fullName>
        <label>Alt Last Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Middle_Name__c</fullName>
        <label>Alt Middle Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Person_Type__c</fullName>
        <label>Alt Person Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alt_Phone_2__c</fullName>
        <label>Alt Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alt_Phone__c</fullName>
        <label>Alt Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Alt_Related_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alt Related Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses Archived</relationshipLabel>
        <relationshipName>Survey_Responses_Archived</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alt_Source__c</fullName>
        <label>Alt Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collected_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collected By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses Archived (Collected By)</relationshipLabel>
        <relationshipName>Survey_Responses_Archived2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collected_Datetime__c</fullName>
        <label>Collected Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses Archived (Contact)</relationshipLabel>
        <relationshipName>Survey_Responses_Archived1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coordinator_Original__c</fullName>
        <label>Coordinator Original</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizer_1_Original__c</fullName>
        <label>Organizer 1 Original</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Responses__c</fullName>
        <label>Previous Responses</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Group__c</fullName>
        <label>Report Group</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Value__c</fullName>
        <label>Response Value</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipLabel>Survey Responses Archived</relationshipLabel>
        <relationshipName>Survey_Responses_Archived</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Response Archived</label>
    <nameField>
        <label>Survey Response Archived Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Responses Archived</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>